--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             content: '';
             position: absolute;
             width: 0;
-            height: 3px; // Çizgi kalınlığı
+            height: 3px;
             bottom: -4px;
             left: 0;
             background-color: #38bdf8;
@@ -218,7 +218,7 @@
                 </p>
 
                 <div class="flex flex-row gap-3 fade-in-up delay-300 items-center">
-                    <!-- E-posta Butonu: Metin "E-mail" olarak güncellendi -->
+                    <!-- E-posta Butonu -->
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=yilmazysesidenur@gmail.com" target="_blank" class="flex items-center gap-2 px-5 py-2.5 bg-white text-slate-900 rounded-lg font-bold hover:bg-sky-50 transition-all shadow-[0_0_15px_rgba(255,255,255,0.1)] hover:shadow-[0_0_25px_rgba(56,189,248,0.3)] transform hover:-translate-y-0.5 text-sm">
                         <i class="fas fa-envelope text-lg text-sky-600"></i>
                         <span>E-mail</span>
@@ -236,12 +236,18 @@
                 </div>
             </div>
 
-            <!-- Dekoratif Beyin İkonu Grubu -->
+            <!-- Profil Fotoğrafı ve Dekoratif Gruplar -->
             <div class="order-1 md:order-2 flex justify-center fade-in-up delay-200">
-                <div class="relative w-72 h-72 md:w-96 md:h-96 rounded-full glass-panel flex items-center justify-center border-4 border-sky-500/10 backdrop-blur-xl">
-                    <i class="fas fa-brain text-9xl text-sky-500/80 animate-pulse drop-shadow-[0_0_15px_rgba(56,189,248,0.5)]"></i>
-                    <div class="absolute -inset-6 border border-sky-400/20 rounded-full animate-[spin_12s_linear_infinite]"></div>
-                    <div class="absolute -inset-12 border border-dashed border-sky-400/10 rounded-full animate-[spin_20s_linear_infinite_reverse]"></div>
+                <div class="relative w-72 h-72 md:w-96 md:h-96 rounded-full glass-panel flex items-center justify-center border-4 border-sky-500/10 backdrop-blur-xl overflow-visible p-1">
+                    <!-- Belirtilen linkteki resim eklendi -->
+                    <img src="https://raw.githubusercontent.com/ASY-crypto/AyseYilmaz.github.io/refs/heads/main/src/resmim.jpeg" 
+                         alt="Ayşe Sidenur Yılmaz" 
+                         class="w-full h-full object-cover rounded-full shadow-[0_0_20px_rgba(56,189,248,0.3)] border-2 border-white/10"
+                         onerror="this.src='https://via.placeholder.com/400?text=Profile+Photo'">
+                    
+                    <!-- Dekoratif Dönen Halkalar -->
+                    <div class="absolute -inset-6 border border-sky-400/20 rounded-full animate-[spin_12s_linear_infinite] pointer-events-none"></div>
+                    <div class="absolute -inset-12 border border-dashed border-sky-400/10 rounded-full animate-[spin_20s_linear_infinite_reverse] pointer-events-none"></div>
                 </div>
             </div>
         </div>
