--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         .nav-link {
             position: relative;
             cursor: pointer;
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             letter-spacing: 0.05em;
             font-weight: 500;
         }
@@ -177,35 +177,33 @@
         <canvas id="neuroCanvas"></canvas>
     </div>
 
-    <!-- Navigasyon Çubuğu -->
-    <nav class="fixed w-full z-50 transition-all duration-300 p-2 md:p-4">
-        <!-- padding dengelendi (py-3) -->
-        <div class="max-w-7xl mx-auto flex justify-between items-center glass-panel rounded-full px-8 py-3">
+    <!-- Navigasyon Çubuğu: Yazılar ve logo orantılı olarak yaklaştırıldı -->
+    <nav class="fixed w-full z-50 transition-all duration-300 p-2 md:p-3">
+        <div class="max-w-6xl mx-auto flex justify-between items-center glass-panel rounded-full px-6 py-2">
+            <!-- Sol Kısım: Unvanlar, çerçeve kenarına ve menüye daha yakın -->
             <div class="flex flex-col items-start justify-center leading-tight select-none cursor-default">
-                <!-- Unvanlar ideal boyuta getirildi (text-base md:text-lg) -->
-                <span class="text-base md:text-lg text-sky-400 font-bold tracking-widest uppercase font-futuristic">Biomedical Engineer</span>
-                <!-- Alt metin orantılı küçültüldü (text-[10px] md:text-xs) -->
-                <div class="text-[10px] md:text-xs text-slate-400 font-medium tracking-wider mt-0.5">
-                    Data Scientist <span class="text-sky-600 mx-1">|</span> AI Researcher
+                <span class="text-sm md:text-base text-sky-400 font-bold tracking-widest uppercase font-futuristic">Biomedical Engineer</span>
+                <div class="text-[10px] md:text-xs text-slate-400 font-medium tracking-wider">
+                    Data Scientist <span class="text-sky-600 mx-0.5">|</span> AI Researcher
                 </div>
             </div>
             
-            <!-- Menü Linkleri -->
-            <div class="hidden lg:flex space-x-6 text-slate-300">
-                <a href="#home" class="nav-link hover:text-white text-sm font-semibold tracking-wide">HOME</a>
-                <a href="#about" class="nav-link hover:text-white text-sm font-semibold tracking-wide">MY VISION</a>
-                <a href="#skills" class="nav-link hover:text-white text-sm font-semibold tracking-wide">SKILLS</a>
-                <a href="#projects" class="nav-link hover:text-white text-sm font-semibold tracking-wide">PROJECTS</a>
-                <a href="#experience" class="nav-link hover:text-white text-sm font-semibold tracking-wide">EXPERIENCE</a>
-                <a href="#education" class="nav-link hover:text-white text-sm font-semibold tracking-wide">EDUCATION</a>
-                <a href="#contact" class="nav-link hover:text-white text-sm font-semibold tracking-wide">CONTACT</a>
+            <!-- Menü Linkleri: Navigasyon içerisinde daha kompakt bir yapı -->
+            <div class="hidden lg:flex space-x-5 text-slate-300">
+                <a href="#home" class="nav-link hover:text-white uppercase">Home</a>
+                <a href="#about" class="nav-link hover:text-white uppercase">My Vision</a>
+                <a href="#skills" class="nav-link hover:text-white uppercase">Skills</a>
+                <a href="#projects" class="nav-link hover:text-white uppercase">Projects</a>
+                <a href="#experience" class="nav-link hover:text-white uppercase">Experience</a>
+                <a href="#education" class="nav-link hover:text-white uppercase">Education</a>
+                <a href="#contact" class="nav-link hover:text-white uppercase">Contact</a>
             </div>
         </div>
     </nav>
 
-    <!-- Giriş (Hero) Bölümü -->
-    <section id="home" class="relative min-h-screen flex items-center justify-center pt-20 pb-12">
-        <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-16 items-center">
+    <!-- Giriş (Hero) Bölümü: Başlık ve resim arası boşluk optimize edildi -->
+    <section id="home" class="relative min-h-screen flex items-center justify-center pt-24 pb-12">
+        <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
             <div class="order-2 md:order-1">
                 <h1 class="text-4xl md:text-6xl font-extrabold text-white mb-6 leading-tight fade-in-up delay-100 text-glow font-futuristic">
                     Pioneering <span class="text-sky-400">AI</span> in <br class="hidden md:block"> Biomedical
@@ -236,9 +234,9 @@
                 </div>
             </div>
 
-            <!-- Profil Fotoğrafı -->
+            <!-- Profil Fotoğrafı: Başlığın hizasından başlayacak şekilde dengelendi -->
             <div class="order-1 md:order-2 flex justify-center fade-in-up delay-200">
-                <div class="relative w-80 h-80 md:w-96 md:h-96 rounded-full glass-panel flex items-center justify-center border-4 border-sky-500/10 backdrop-blur-xl overflow-visible p-1">
+                <div class="relative w-80 h-80 md:w-[420px] md:h-[420px] rounded-full glass-panel flex items-center justify-center border-4 border-sky-500/10 backdrop-blur-xl overflow-visible p-1">
                     <img src="https://raw.githubusercontent.com/ASY-crypto/AyseYilmaz.github.io/refs/heads/main/src/resmim.jpeg" 
                          alt="Ayşe Sidenur Yılmaz" 
                          class="w-full h-full object-cover rounded-full shadow-[0_0_20px_rgba(56,189,248,0.3)] border-2 border-white/10"
