--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 
-                <!-- Sağ Kısım: Menü (Sıralama Publications eklenecek şekilde Güncellendi) -->
+                <!-- Sağ Kısım: Menü -->
                 <div class="hidden lg:flex space-x-6 text-slate-300">
                     <a href="#home" class="nav-link hover:text-white uppercase">Home</a>
                     <a href="#about" class="nav-link hover:text-white uppercase">My Vision</a>
@@ -238,7 +238,7 @@
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-3xl md:text-4xl font-bold mb-16 text-center font-futuristic text-glow">Technical Skills</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <!-- Temel Teknolojiler -->
+                <!-- Core Technologies -->
                 <div class="glass-card p-8 rounded-2xl">
                     <div class="w-14 h-14 rounded-2xl bg-sky-500/20 flex items-center justify-center mb-6 text-sky-400 shadow-[0_0_15px_rgba(56,189,248,0.2)]">
                         <i class="fas fa-code text-2xl"></i>
@@ -256,7 +256,7 @@
                         <span class="px-3 py-1.5 bg-sky-500/10 border border-sky-500/20 rounded-lg text-sm text-sky-200">LLMs & AI Agents</span>
                     </div>
                 </div>
-                <!-- Biyomedikal -->
+                <!-- Biomedical -->
                 <div class="glass-card p-8 rounded-2xl">
                     <div class="w-14 h-14 rounded-2xl bg-red-500/20 flex items-center justify-center mb-6 text-red-400 shadow-[0_0_15px_rgba(239,68,68,0.2)]">
                         <i class="fas fa-heartbeat text-2xl"></i>
@@ -270,7 +270,7 @@
                         <li class="flex items-center"><i class="fas fa-check-circle text-red-500 mr-3"></i> Device Calibration</li>
                     </ul>
                 </div>
-                <!-- Araçlar -->
+                <!-- Tools -->
                 <div class="glass-card p-8 rounded-2xl">
                     <div class="w-14 h-14 rounded-2xl bg-emerald-500/20 flex items-center justify-center mb-6 text-emerald-400 shadow-[0_0_15px_rgba(16,185,129,0.2)]">
                         <i class="fas fa-tools text-2xl"></i>
@@ -291,7 +291,7 @@
         </div>
     </section>
 
-    <!-- Experience: EKSİKSİZ TÜM DETAYLAR -->
+    <!-- Experience -->
     <section id="experience" class="py-24 relative z-10">
         <div class="max-w-5xl mx-auto px-6">
             <h2 class="text-3xl md:text-4xl font-bold mb-12 section-title font-futuristic text-glow">Experience</h2>
@@ -358,7 +358,7 @@
     <section id="impact" class="py-24 bg-slate-900/40 relative z-10">
         <div class="max-w-5xl mx-auto px-6">
             <h2 class="text-3xl md:text-4xl font-bold mb-8 section-title font-futuristic text-glow">Recognition & Impact</h2>
-            <div class="glass-panel p-10 rounded-3xl border border-sky-500/10 shadow-xl">
+            <div class="glass-card p-10 rounded-3xl border border-sky-500/10 shadow-xl">
                 <h3 class="text-xl md:text-2xl font-bold text-white mb-6 flex items-center gap-3">
                     <i class="fas fa-landmark text-sky-400"></i>
                     Presentation to the Former President of the Turkish Republic of Northern Cyprus (TRNC)
@@ -370,11 +370,24 @@
         </div>
     </section>
 
-    <!-- Projects & Research -->
+    <!-- Projects & Research: Physio Guard Başa Alındı ve Güncellendi -->
     <section id="projects" class="py-24 relative z-10">
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-3xl md:text-4xl font-bold mb-12 section-title font-futuristic text-glow">Projects & Research</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <!-- Physio Guard (Ongoing & Independent) -->
+                <div class="glass-card p-8 rounded-2xl flex flex-col border-l-4 border-l-sky-500">
+                    <div class="flex justify-between items-start mb-4">
+                        <h3 class="text-xl font-bold text-white hover-line">Physio Guard</h3>
+                        <div class="flex flex-col items-end gap-1">
+                            <span class="text-[10px] bg-sky-500/20 text-sky-300 px-3 py-1 rounded-full font-bold uppercase tracking-wider">Independent Project</span>
+                            <span class="text-[10px] bg-emerald-500/20 text-emerald-300 px-3 py-1 rounded-full font-bold uppercase tracking-wider animate-pulse">Ongoing</span>
+                        </div>
+                    </div>
+                    <p class="text-slate-300 mb-4 font-light flex-grow leading-relaxed">
+                        AI-Powered Real-Time Biomechanical Analysis for Physical Therapy. This independent initiative focuses on utilizing advanced pose estimation algorithms to monitor patient movements, offering real-time corrective feedback and automated progress tracking for rehabilitation processes.
+                    </p>
+                </div>
                 <!-- VisionaryHealth -->
                 <div class="glass-card p-8 rounded-2xl flex flex-col">
                     <div class="flex justify-between items-start mb-4">
@@ -482,7 +495,7 @@
         </div>
     </section>
 
-    <!-- Publications & Awards: ID Eklendi -->
+    <!-- Publications & Awards -->
     <section id="publications" class="py-24 relative z-10">
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-3xl md:text-4xl font-bold mb-8 section-title font-futuristic text-glow">Publications & Awards</h2>
